<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Launcher</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name"></string>
    <string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format" translatable="false">%1$d x %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d x %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item onto this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Manage apps</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">System settings</string>
    <string name="menu_help">Help</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Workspace %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="workspace_cling_title">Make yourself at home</string>
    <string name="workspace_cling_move_item">You can put your favorite apps here.</string>
    <string name="workspace_cling_open_all_apps">To see all your apps, touch the circle.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="folder_cling_title">Organize your apps with folders</string>
    <string name="folder_cling_move_item">To move an app, touch &amp; hold it.</string>
    <string name="folder_cling_create_folder">To make a new folder on your Home screen, stack one app on top of another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="folder_opened">Folder opened, %1$d by %2$d</string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to commit rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to %1$s</string>
    <string name="folder_name_format">Folder: %1$s</string>
	<string name="one_video_widget">Only one \"<xliff:g id="name" example="video player">%s</xliff:g>\" is allowed in Home screen</string>
	<string name="orientation">cannot detect orientation</string>
	<string name="scene">Scenes</string>
	<string name="alart_msg_if_delete">Are you sure delete?</string>
	<string name="alart_yes">yes</string>
	<string name="alart_no">no</string>
	<string-array name="scene_name">
        <item>Default</item>
	    <item>Work</item>
    </string-array>
	<string name="str_file_not_find">No apk file in memory card</string>
	<string name="str_dir_not_find">No apk dir in memory card</string>
	<string name="str_dir_is_empty">Apk dir is empty</string>
	<string name="pre_shortcut1">Templerun</string>
	<string name="house_scene">House scence</string>
	<string name="classic_scene">Classic desktop</string>
	<string name="fresh">Fresh</string>
	<string name="princess">Princess Dream</string>
    <string name="wall">Wall</string>
	<string name="clock">Clock</string>
	<string name="calendar">Calendar</string>
	<string name="phone_message">Phone/Message</string>
	<string name="wall_lamp">Wall lamp</string>
	<string name="camera_zone">iSNS/Camera</string>
	<string name="globe">Globe</string>
	<string name="sofa">Sofa</string>
	<string name="qq">QQ</string>
	<string name="window">Window</string>
	<string name="easel">Easel</string>
	<string name="photo_frame">Photo frame</string>
	<string name="music">Music</string>
	<string name="bookcase">Bookcase</string>
	<string name="showcase">Showcase</string>
	<string name="toy">Toy</string>
	<string name="shelf">Shelf</string>
	<string name="notes">Notes</string>
	<string name="image">Image</string>
	<string name="radio">Radio</string>
	<string name="computer">Computer</string>
    <string name="weather_fine">Fine</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_rainy">Rainy</string>
    <string name="weather_snowy">Snowy</string>
    <string name="month_format">MM</string>
    <string name="year_format">yyyy</string>
    <string name="day_format">dd</string>
    <string name="str_missed_call">missed call</string>
    <string name="str_unread_msg">unread message</string>
    <string name="str_missed_calls">missed calls</string>
    <string name="str_unread_msgs">unread messages</string>
    <string name="bookshelf_toast_hints">select %1$d max</string>
    <string name="bookshelf_btn_info">selected (%1$d/%2$d)</string>
    <string name="rand_effect">Rand</string>
    <string name="classic_effect">Classic</string>
    <string name="wave_effect">Wave</string>
    <string name="fade_effect">Fade</string>
    <string name="flip_effect">Flip</string>
    <string name="windmill_effect">Windmill</string>
    <string name="cube_effect">Cube</string>
    <string name="blind_effect">Blind</string>
    <string name="photowall_effect">Photowall</string>
    <string name="push_effect">Push</string>
    <string name="updown_effect">Up and down</string>
    <string name="apps_rand_effect">Rand</string>
    <string name="apps_classic_effect">Classic</string>
    <string name="apps_fade_effect">Fade</string>
    <string name="apps_flip_effect">Flip</string>
    <string name="apps_windmill_effect">Windmill</string>
    <string name="apps_cube_effect">Cube</string>
    <string name="apps_blind_effect">Blind</string>
    <string name="apps_photowall_effect">Photowall</string>
    <string name="apps_push_effect">Push</string>
    <string name="apps_updown_effect">Up and down</string>
</resources>